--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@fontsource/oswald": "^5.1.0",
+    "@heroicons/react": "^2.1.5",
     "@next/font": "^14.2.13",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "d3": "^7.9.0",
     "express": "^4.21.0",
+    "heatmap.js": "^2.0.5",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
     "next": "14.2.13",
