--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "heatmap.js": "^2.0.5",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
-    "next": "14.2.13",
+    "next": "^14.2.14",
     "next-auth": "^4.24.8",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18"
   },
   "devDependencies": {
